Updated to Counter Strike 2 Theme
Entire Website UI has changed, leans more to Source 2 mode.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@
 /* Colors */
 :root {
   --color-default: #222222;
-  --color-primary: #008374;
+  --color-primary:#feac00;
   --color-secondary: #f85a40;
 }
 
@@ -64,7 +64,7 @@ section {
 }
 
 .sections-bg {
-  background-color: #f6f6f6;
+  background-color: #feac00;
 }
 
 .section-header {
@@ -111,7 +111,7 @@ section {
 .breadcrumbs .page-header h2 {
   font-size: 56px;
   font-weight: 500;
-  color: #fff;
+  color: black;
   font-family: var(--font-secondary);
 }
 
@@ -248,7 +248,7 @@ section {
 # Header
 --------------------------------------------------------------*/
 .topbar {
-  background: #00796b;
+  background: #feac00;
   height: 40px;
   font-size: 14px;
   transition: all 0.5s;
@@ -608,7 +608,7 @@ section {
     content: "";
     position: fixed;
     inset: 0;
-    background: rgba(0, 106, 93, 0.8);
+    background: rgba(255, 209, 2, 0.8);
     z-index: 9996;
   }
 }
@@ -864,7 +864,7 @@ section {
   width: 94px;
   height: 94px;
   margin-bottom: 20px;
-  background: radial-gradient(var(--color-primary) 50%, rgba(0, 131, 116, 0.4) 52%);
+  background: radial-gradient(var(--color-primary) 50%, rgb(255, 209, 6) 52%);
   border-radius: 50%;
   display: inline-block;
   position: relative;
@@ -888,7 +888,7 @@ section {
   animation-timing-function: steps;
   opacity: 1;
   border-radius: 50%;
-  border: 5px solid rgba(0, 131, 116, 0.7);
+  border: 5px solid rgba(131, 129, 0, 0.7);
   top: -15%;
   left: -15%;
   background: rgba(198, 16, 0, 0);
